--- a/app/views/timeline/mypage.html.erb
+++ b/app/views/timeline/mypage.html.erb
@@ -1,6 +1,6 @@
 <h1><%=@me.email%>'s Timeline</h1>
 <%=form_tag '/mywrite', method: 'post'%>
-    <textarea class="form-control" name="naeyong"></textarea>
+    <textarea class="form-control" rows="3" name="naeyong"></textarea>
     <input class="btn btn-success" type="submit">
 </form>
 <ul>
@@ -12,7 +12,7 @@
             </div>
             <a href="/edit?id=<%=b.id%>">수정</a>
             <a href="/destroy?id=<%=b.id%>">삭제</a>
-            <%=form_tag '/comment', method: 'post' class: "form-inline" %>
+            <%=form_tag '/comment', method: 'post', class: "form-inline" %>
                 <input type="hidden" name="blog_id" value="<%=b.id%>">
                 <div class="form-group">
                     <input type="text" name="comment" class="form-control">
